# yuuki-lab

./: .gitignore  README.md
mujoco-sim/: .gitignore  README.md  pyproject.toml  requirements.txt
mujoco-sim/.cursor/rules/: mujoco-rl-monoped-hopper.mdc
mujoco-sim/mujoco_biped_control/: README.md  __init__.py
mujoco-sim/mujoco_biped_control/walk_v0/: README.md  _paths.py  replay_incident.py  requirements.txt  run.py  visualize.py  walk_meta.py
mujoco-sim/mujoco_biped_control/walk_v0/conf/: controller.yaml  default.yaml
mujoco-sim/mujoco_realtime_sim/: __init__.py  __main__.py  app.py  core.py  imu_stream_socket.py  kinematics.py  passive_viewer.py  paths.py  realtime.py  sim_imu_reader.py  viewer_cmd.py
mujoco-sim/mujoco_rl_sim/: __init__.py
mujoco-sim/mujoco_rl_sim/agents/: agent_001.py  agent_002.py  agent_006_dqn.py  agent_007_ppo.py  agent_008_a2c.py  agent_009_a2c.py  agent_010_a2c.py
mujoco-sim/mujoco_rl_sim/contract/: __init__.py  __main__.py  biped_v1.py  codegen.py  session.py  telemetry.py  validate.py
mujoco-sim/mujoco_rl_sim/dispatch/: README.md  __init__.py  paths.py
mujoco-sim/mujoco_rl_sim/envs/: __init__.py  env_001_knee_track.py  env_002_full_actuators.py  env_003_static_actuators.py  env_004.py  env_005.py  env_006_dqn.py  env_007_ppo.py  env_008_a2c.py  env_009_a2c.py  env_010_a2c.py  full_actuators.py  knee_track.py
mujoco-sim/mujoco_rl_sim/experiments/: AGENTS.md  __init__.py
mujoco-sim/mujoco_rl_sim/lib/: __init__.py  ctrl.py  episode_rolling.py  mujoco_paths.py  wandb_fav.py
mujoco-sim/mujoco_rl_sim/scripts/: __init__.py  play_full_actuators.py  play_knee_track.py  test.py  train_001_knee_track.py  train_002_full_actuators.py  train_003_static_actuators.py  train_004.py  train_005.py  train_006_dqn.py  train_007_ppo.py  train_008_a2c.py  train_009_a2c_2joint.py  train_010_a2c_2joint.py  train_full_actuators.py  train_knee_track.py  verify_full_actuators_viewer_telemetry.py  visualize_001.py  watch_full_actuators.py  watch_training_live.py
mujoco-sim/mujoco_rl_sim/telemetry/: __init__.py  biped_ppo.py  env_wrapper.py  rl_socketio_server.py
mujoco-sim/mujoco_sim/: __init__.py  __main__.py  app.py  core.py  kinematics.py  passive_viewer.py  paths.py  realtime.py  viewer_cmd.py
mujoco-sim/mujoco_sim/xmls/: actuators.xml  assets.xml  main.xml  world.xml
mujoco-sim/mujoco_sim_assets/: __init__.py  paths.py
mujoco-sim/mujoco_sim_assets/xmls/: sensors.xml
mujoco-sim/mujoco_sim_common/: __init__.py  viewer_aux_bridge.py  viewer_visual_presets.py
mujoco-sim/mujoco_sim_common/telemetry/: __init__.py  hub_socketio_server.py
mujoco-sim/programs/: README.md  mujoco_test_001.py  mujoco_test_002.py  mujoco_test_003.py  mujoco_test_004.py  mujoco_test_005.py  mujoco_test_006.py  mujoco_test_007.py  mujoco_test_008.py  mujoco_test_009.py  mujoco_test_010.py
mujoco-sim/scripts/: launch_exp_021_parallel.ps1  launch_exp_022_parallel.ps1  launch_exp_023_parallel.ps1  launch_exp_024_parallel.ps1  standaloneize_experiments.py
(+1187 files in other folders)
