[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-sim"
version = "0.1.0"
description = "MuJoCo realtime HTTP sim + RL envs for yuuki-lab"
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.0",
  "numpy>=1.23",
  "flask>=3.0",
  "flask-cors>=4.0",
]

[project.optional-dependencies]
rl = [
  "gymnasium>=0.29.1",
  "stable-baselines3>=2.2.0",
]

[project.scripts]
mujoco-sim-serve = "mujoco_realtime_sim.__main__:main"
mujoco-sim-view = "mujoco_realtime_sim.viewer_cmd:main"
mujoco-rl-train-knee = "mujoco_rl_sim.scripts.train_knee_track:main"
mujoco-rl-watch-knee = "mujoco_rl_sim.scripts.watch_training_live:main"
mujoco-rl-play-knee = "mujoco_rl_sim.scripts.play_knee_track:main"
mujoco-rl-train-full = "mujoco_rl_sim.scripts.train_full_actuators:main"
mujoco-rl-watch-full = "mujoco_rl_sim.scripts.watch_full_actuators:main"
mujoco-rl-play-full = "mujoco_rl_sim.scripts.play_full_actuators:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mujoco_realtime_sim*", "mujoco_rl_sim*", "mujoco_sim_assets*"]

[tool.setuptools.package-data]
mujoco_sim_assets = ["xmls/**/*.xml"]
