[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-sim"
version = "0.1.0"
description = "MuJoCo realtime HTTP sim + RL envs for yuuki-lab"
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.0",
  "numpy>=1.23",
  "flask>=3.0",
  "flask-cors>=4.0",
  "flask-socketio>=5.3.0",
]

[project.optional-dependencies]
rl = [
  "gymnasium>=0.29.1",
  "stable-baselines3>=2.2.0",
  "wandb>=0.16",
]
dispatch = [
  "pyyaml>=6",
]
video = [
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
]

[project.scripts]
mujoco-sim-serve = "mujoco_realtime_sim.__main__:main"
mujoco-sim-view = "mujoco_realtime_sim.viewer_cmd:main"
mujoco-dispatch-coord = "mujoco_rl_sim.dispatch.coordinator.__main__:main"
mujoco-dispatch-worker = "mujoco_rl_sim.dispatch.worker.__main__:main"
mujoco-dispatch = "mujoco_rl_sim.dispatch.coordinator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "mujoco_realtime_sim*",
  "mujoco_rl_sim*",
  "mujoco_sim_assets*",
  "mujoco_sim_common*",
]

[tool.setuptools.package-data]
mujoco_sim_assets = ["xmls/**/*.xml"]
